--- a/src/app/ui/employees-faces/employees-faces.component.html
+++ b/src/app/ui/employees-faces/employees-faces.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngFor="let face of data$ | async" >
-  <img [src]="face.image" [alt]="face"/>
+  <img [src]="face.img" [alt]="face"/>
   <br>
   {{ face.name }}
 </div>
