--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<employee-list></employee-list>
-<app-employees-faces></app-employees-faces>
-<app-project-list></app-project-list>
-<br/>
-<app-employee-form></app-employee-form>
+<router-outlet></router-outlet>
