--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,7 +1,10 @@
 <h1>Employee list</h1>
-<h2>{{ welcome }}</h2>
-<ul *ngIf="data$ | async as data; else empty">
-  <li *ngFor="let employee of data">{{ employee.personalNumber }}: {{ employee.name }}. Email: {{ employee.mail }} <button (click)="remove(employee.personalNumber)">remove</button></li>
+<ul *ngIf="data$ | async as data; else empty" class="list-group d-flex align-items-flex-start p-3">
+  <li class="list-group-item d-flex justify-content-between align-items-start w-25" *ngFor="let employee of data">{{ employee.personalNumber }}: {{ employee.name }}.
+    Email: {{ employee.mail }}
+    <button class="d-flex align-items-end btn btn-danger" (click)="remove(employee.personalNumber)">remove</button>
+
+  </li>
 </ul>
 
-<ng-template #empty> There is no data </ng-template>
+<ng-template #empty> There is no data</ng-template>
