--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="p-3 w-25">
-<a class="d-block m-2 btn btn-success" routerLink="/employee-list">Go to list of employees</a>
-<a class="d-block m-2 btn btn-success" routerLink="/create-employee">Go to form </a>
+<div class="d-flex align-items-center justify-content-center" >
+<a class="btn btn-success" routerLink="/employee-list">Go to list of employees</a>
+<a class="btn btn-success" routerLink="/create-employee">Go to form </a>
+
 </div>
