--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,12 +1,13 @@
 <h1 class="d-flex justify-content-center">Employee list</h1>
 <div class="d-flex align-items-center vw-100 justify-content-center">
-<ul *ngIf="data$ | async as data; else empty" class="list-group d-flex align-items-flex-start p-3">
-  <li class="list-group-item d-flex justify-content-between align-items-start" *ngFor="let employee of data">{{ employee.personalNumber }}: {{ employee.name }}.
-    Email: {{ employee.mail }}
-    <button class="d-flex align-items-end btn btn-danger" (click)="remove(employee.personalNumber)">remove</button>
+  <ul *ngIf="data$ | async as data; else empty" class="list-group d-flex align-items-flex-start p-3">
+    <li class="list-group-item d-flex justify-content-between align-items-start" *ngFor="let employee of data">
+      {{ employee.personalNumber }}:
+      <a [routerLink]="['/employee-details/', employee.personalNumber, employee.name ]">{{ employee.name }}.</a>
+      Email: {{ employee.mail }}
+      <button class="d-flex align-items-end btn btn-danger" (click)="remove(employee.personalNumber)">remove</button>
+    </li>
+  </ul>
 
-  </li>
-</ul>
-
-<ng-template #empty> There is no data</ng-template>
+  <ng-template #empty> There is no data</ng-template>
 </div>
