--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,11 +1,12 @@
 <h1 class="d-flex justify-content-center">Employee list</h1>
 <div class="d-flex align-items-center vw-100 justify-content-center">
-  <ul *ngIf="data$ | async as data; else empty" class="list-group d-flex align-items-flex-start p-3">
-    <li class="list-group-item d-flex justify-content-between align-items-start" *ngFor="let employee of data">
+  <ul *ngIf="data$ | async as data; else empty" class="list-group d-flex align-items-center">
+    <li class="list-group-item d-flex justify-content-between align-items-end w-75" *ngFor="let employee of data">
       {{ employee.personalNumber }}:
-      <a [routerLink]="['/employee-details/', employee.personalNumber, employee.name ]">{{ employee.name }}.</a>
+      {{ employee.name }}.
       Email: {{ employee.mail }}
-      <button class="d-flex align-items-end btn btn-danger" (click)="remove(employee.personalNumber)">remove</button>
+      <button class="d-flex align-items-end btn btn-danger m-1" (click)="remove(employee.personalNumber)">remove</button>
+      <button class="d-flex align-items-end btn btn-success m-1" [routerLink]="['/employee-details/', employee.personalNumber]">Details</button>
     </li>
   </ul>
 
